# django-daisy

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  admin.py  apps.py  mixins.py  models.py  module_settings.py  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js  tailwind.config2.js  tox.ini
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml  tox_test.yml  update-hf-space.yml
build-styles/: app.css  customize.css  customized_tailwind.css
django_daisy/: __init__.py  __version__.py  _helpers.py  _version.py  admin.py  apps.py  logentry_admin.py  module_settings.py  urls.py
django_daisy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_daisy/fields/: checkbox.py  comma_sep.py  json_editor_field.py  tags_field.py  thousand_sep_field.py  tinyeditor.py
django_daisy/locale/fa/LC_MESSAGES/: django.mo  django.po
django_daisy/management/commands/: build_daisyui.py
django_daisy/static/admin/css/: app.css  base_tailwind.css  calendar.css  custom.css  customized_components.css  customized_tailwind.css  styles.css  tailwind.css
django_daisy/static/admin/fields/: tags.widget.js  thousand_sep_field.js  tiny_init.js
django_daisy/static/admin/img/: anki_export.csv
django_daisy/static/admin/js/: autocomplete.js  core.js  inlines.min.js  popup_response.js  query_filter.js
django_daisy/templates/admin/: actions.html  app_index.html  base.html  base_site.html  change_form.html  change_form_full.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  pagination.html  search_form.html  submit_line.html  submit_line_full.html
django_daisy/templates/admin/edit_inline/: stacked.html  tabular.html
django_daisy/templates/admin/import_export/: base.html  change_form.html  change_list.html  change_list_export.html  change_list_export_item.html  change_list_import.html  export.html  import.html  (+2 more)
django_daisy/templates/admin_doc/: index.html  model_detail.html  model_index.html
django_daisy/templates/fields/: json_editor_field.html  tags_field.html
django_daisy/templates/registration/: password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_form.html
django_daisy/templatetags/: dash_tags.py
fields/: summernote.py
static/admin/css/: autocomplete.css  base.css  custom-forms.css  tailwind.css  widgets.css
static/admin/fields/: ckeditor_init.js
static/admin/js/: autocomplete.js  ckeditor.js  collapse.js  jquery.init.js  popup_response.js  translation_field_api.js
templates/admin/: change_form_22222.html  change_list.html  change_list_object_tools.html  change_list_results.html
templates/admin/edit_inline/: tabular.html
templates/admin/parts/: app_list.html  messages.html  navbar.html  sidebar.html
templates/django/forms/: attrs.html
templatetags/: dash_tags.py
(+40 files in other folders)
