[build-system]
requires = ["setuptools>=42", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "django-daisy"
description = "A modern Django dashboard built with DaisyUI"
authors = [
    { name="Hossein Yaghoubi", email="hossein.yaghoubi13@gmail.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "Django>=3.4",
]
keywords = ["django", "admin", "dashboard", "daisyui", "tailwindcss"]
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

# Declare fields that are dynamically set
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "django_daisy"}

[tool.setuptools.packages.find]
where = ["django_daisy"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "django_daisy/_version.py"
versionfile_build = "django_daisy/_version.py"
tag_prefix = "v"  # Git tag prefix (e.g., v1.0.0)
parentdir_prefix = "django_daisy-"  # Directory prefix (e.g., django_daisy-1.0.0)
