[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "django-daisy"
description = "A modern Django dashboard built with DaisyUI"
authors = [
    { name="Hossein Yaghoubi", email="hossein.yaghoubi13@gmail.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "Django>=3.2",
]
keywords = ["django", "admin", "dashboard", "daisyui", "tailwindcss"]
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

# Declare fields that are dynamically set
dynamic = ["version"]

[tool.setuptools]
packages = ["django_daisy"]

[tool.setuptools_scm]
version_file = "django_daisy/_version.py"